# pico-an-os

./: .gitignore  README.md  Todo.md  windows_boot_macro.scad
cad/: windows_boot_macro.stl
pico_f2_keeb/: CMakeLists.txt  main.c  tusb_config.h
